ADMINUI-943 misc tweaks,fixes ADMINUI-1216 packages not showing up in vm-change-package

--- a/less/app.less
+++ b/less/app.less
@@ -9,6 +9,7 @@
 @import "typeahead.less";
 
 
+
 body { height: 100%; }
 html { height: 100%; }
 
@@ -547,8 +548,9 @@ h1.branding {
   .serial-console {
     overflow: hidden;
     margin-top: 10px;
+    input { width: 100px;}
 
-    .item-content { width: 194px; text-align: right;}
+    .item-content { width: 110px; text-align: right;}
     .change { padding: 8px; }
   }
 
